# p2p_chat

./: CMakeLists.txt  Client.cpp  Client.hpp  Makefile  README  Server.cpp  Server.hpp  Window.cpp  Window.hpp  client.conf  funcs.cpp  funcs.hpp  main.cpp  server.conf  tcpclient.c  tcpserver.c
